# mdbook-numbering

./: .gitignore  404.html  Cargo.toml  README.md  appendix-1.html  appendix-2.html  chapter_1.html  chapter_1_1.html  chapter_1_2.html  chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html  code-blocks.html  compatibility-alerts.html  compatibility-draft.html  compatibility-katex.html  compatibility-mdbook.html  compatibility-nested-nested.html  compatibility-nested.html  compatibility-tables.html  compatibility.html  index.html  package.json  pnpm-lock.yaml  preface-1.html  preface-2.html  print.html  rustfmt.toml  searcher-c2a407aa.js  searchindex-110d2a50.js  searchindex-37c738e6.js  searchindex-492465ef.js  searchindex-6364d79e.js  searchindex-65fd22e4.js  searchindex-87e70b0b.js  searchindex-dc9a963c.js  searchindex.js  searchindex.json  sections.html  (+8 more)
.cargo/: config.toml
.github/workflows/: audit_check.yml  ci.yml  gh-pages.yml  install-deps.sh
examples/consecutive/: book.toml
examples/consecutive/src/: chapter_1_1.md  chapter_1_2.md
examples/dev/: book.toml
examples/dev/src/: SUMMARY.md  appendix-1.md  chapter_1.md  chapter_1_1.md  chapter_1_2.md  chapter_2_2.md  code-blocks.md  compatibility-alerts.md  compatibility-draft.md  compatibility-katex.md  compatibility-mdbook.md  compatibility-nested-nested.md  compatibility-nested.md  compatibility-tables.md  preface-1.md  preface-2.md  sections.md
examples/top/: book.toml
examples/top/src/: chapter_1.md  chapter_1_2.md
src/: build.js  config.rs  lib.rs  main.rs
src/heading/: hide-min.css  hide.css  numbering-min.css  numbering.css
src/highlightjs/: LICENSE  line-numbers-min.css  line-numbers-min.js  line-numbers.css  line-numbers.js
src/tests/: chapters.rs  config.rs  mod.rs  name.rs
tests/: integration.rs
tests/md/: test1.input.md  test1.output.md  test2.input.md  test2.output.md  test3.output.md  test4.input.md  test4.output.md  test5.input.md  test5.output.md
