[package]
name = "mdbook-numbering"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "A mdBook preprocessor that adds numbers to headings and code block lines (for mdbook 0.4.37 and above)."
repository = "https://github.com/TheVeryDarkness/mdbook-numbering"
documentation = "https://docs.rs/mdbook-numbering/latest/mdbook_numbering/"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown"]

[dependencies]
anyhow = "1.0.71"
# mdbook>=0.4.37 so that pulldown-cmark>=0.10 and matches the version below
mdbook = { version = "0.4.37" }
pulldown-cmark = { version = "0.10.0", default-features = false }
pulldown-cmark-to-cmark = "14.0.0"
serde = { version = "1.0.163" }
serde_json = "1.0.96"
toml = "0.5.11"

[dev-dependencies]

[lints.rust]
unused_qualifications = "warn"
