[package]
name = "mdbook-numbering"
version = "0.4.1"
edition = "2024"
license = "MIT or Apache-2.0"
description = "A mdBook preprocessor that adds numbers to headings and code block lines (for mdbook 0.5.0 and above)."
repository = "https://github.com/TheVeryDarkness/mdbook-numbering"
documentation = "https://docs.rs/mdbook-numbering/latest/mdbook_numbering/"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown"]

[dependencies]
anyhow = "1.0.100"
either = "1.15.0"
mdbook-preprocessor = { version = "0.5.0" }
pulldown-cmark = { version = "0.13.0", default-features = false }
pulldown-cmark-to-cmark = "21.0.0"
serde = { version = "1.0.228" }
serde_json = "1.0.145"
toml = "0.5.11"
# tracing = "0.1.41"

[dev-dependencies]
text-diff = "0.4.0"

[lints.rust]
missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
manual_non_exhaustive = "warn"

[lints.rustdoc]
unescaped_backticks = "warn"
